# ChangeLog for net-proxy/sshuttle
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-proxy/sshuttle/ChangeLog,v 1.19 2015/04/15 14:47:04 jlec Exp $

*sshuttle-0.61-r2 (15 Apr 2015)

  15 Apr 2015; Justin Lecher <jlec@gentoo.org> +sshuttle-0.61-r2.ebuild,
  metadata.xml:
  Bump EAPI and python eclasses

  01 Jul 2014; Tim Harder <radhermit@gentoo.org> -sshuttle-0.61.ebuild:
  Remove old.

  04 Mar 2014; Agostino Sarubbo <ago@gentoo.org> sshuttle-0.61-r1.ebuild:
  Stable for x86, wrt bug #502910

  02 Mar 2014; Pacho Ramos <pacho@gentoo.org> sshuttle-0.61-r1.ebuild:
  amd64 stable, bug #502910

*sshuttle-0.61-r1 (22 Jan 2014)

  22 Jan 2014; Tim Harder <radhermit@gentoo.org> +sshuttle-0.61-r1.ebuild:
  Drop shadow or sudo dep (bug #498152).

  13 Dec 2012; Tim Harder <radhermit@gentoo.org> -sshuttle-0.60.ebuild:
  Remove old.

  17 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> sshuttle-0.61.ebuild:
  x86 stable wrt bug #433347

  22 Sep 2012; Agostino Sarubbo <ago@gentoo.org> sshuttle-0.61.ebuild:
  Stable for amd64, wrt bug #433347

*sshuttle-0.61 (19 Jul 2012)

  19 Jul 2012; Tim Harder <radhermit@gentoo.org> +sshuttle-0.61.ebuild:
  Version bump.

  25 Mar 2012; Tim Harder <radhermit@gentoo.org> -sshuttle-0.54.ebuild:
  Remove old.

  24 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> sshuttle-0.60.ebuild:
  x86 stable wrt bug #404025

  16 Feb 2012; Agostino Sarubbo <ago@gentoo.org> sshuttle-0.60.ebuild:
  Stable for amd64, wrt bug #404025

  15 Jan 2012; Tim Harder <radhermit@gentoo.org> sshuttle-0.54.ebuild,
  sshuttle-0.60.ebuild:
  Use die for file removal.

*sshuttle-0.60 (15 Jan 2012)

  15 Jan 2012; Tim Harder <radhermit@gentoo.org> +sshuttle-0.60.ebuild:
  Version bump.

  02 Nov 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> sshuttle-0.54.ebuild:
  x86 stable wrt bug #388387

  27 Oct 2011; Tony Vroon <chainsaw@gentoo.org> sshuttle-0.54.ebuild: