@@ -10,4 +10,4 @@ RDEPEND=net-firewall/iptables
 SLOT=0
 SRC_URI=http://dev.gentoo.org/~radhermit/dist/sshuttle-0.61.tar.xz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	linux-info	2b8c53f6065bdee2d757472215a3088f	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python-single-r1	7a178335dbd6ea7f50ed4e3e1c13c1e4	python-utils-r1	096f8247eae93026af13ab88cf4305cd	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=7a47ea9697f44dcda2d2799c8e5f9ac2
+_md5_=25341ccbeb629e90004a85e9efa28cb4
