@@ -1,27 +1,19 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 DIST sshuttle-0.61.tar.xz 181528 SHA256 78cea312c4bab6f6baa459131cb7739d9fae7d0df9e54efd48fc4ddd852042f5 SHA512 39687ecf0a9b78cc0f7dc576c3c036f5afb52050f17d793602e50c8a9ab8bb0f9eb3277cb2fffb1e9c0f5f652d96c6915aecf8a8da93697172d8cbef1161a986 WHIRLPOOL 9c8597d98306730fcab750094588310c03bafea473b54a2758e055a7bb4bb851b3edad4d2cf2995893a30ed4148b7fd8437820099042ff6c7c52a0dc279d6ebc
 EBUILD sshuttle-0.61-r1.ebuild 986 SHA256 f958bba87c4e46794d132e389b363845633b5ae8c53dae686de189604f219ac0 SHA512 2dd16abfc0a50f42bc5ab89df8d08040e625956947aedabeb49764fd2cf614ff2982b8ca5f4f1183483a91eb8d7a6fb225065fe444ea4f80bf88765d47f89c81 WHIRLPOOL a6bcdf4f7276f31c2e3ad470730b95b44c6e20befa65556f9200dd8c45710b93227e856c0ece5a0b9716c2d651372e3e19fe2d41dad822c3b38f55e14cb303d0
-EBUILD sshuttle-0.61-r2.ebuild 987 SHA256 d82078d98ff5fcd01dcd2555f692cac9e2d3bc17f8d0116d4ff4b52d21543b31 SHA512 2dab6d038855b1282946bb0152b1e315a83ff1bc5501c203e2cb239fcf4ffc5e33d75df45e20a5744305c09bd2ac24077a11177397b2d54b457066ffd220830f WHIRLPOOL 3d8a369013abe8349047217927ac09847488d5ffee2b7f132cf9fef74123d220a1957cc9473d1e5d419aa1a49485c3b21acf53fd0eaf4a519e806df4cee609ce
-MISC ChangeLog 2410 SHA256 5a4596bcdb27ece20c7b1668ec7b19d43a90b0d50c044d3982f7af91ef0ea843 SHA512 d1ddb61af53dc49aea5de5c775adc452e7d60e3f3eb1c1fdc2104e80f35a68ad069cf58eb37657361ab1e7334087008286bba9826ce7e3cf363a49ee452e07c9 WHIRLPOOL 396b8719b86198475b6b60266cceeba32a6e340d1db2da345c2eec3514595226274698c0eaba933bfc54c1343ec017b6ae72473f13f45dadad94fdaf6f298cd5
+EBUILD sshuttle-0.61-r3.ebuild 1009 SHA256 73b1d6a44a1b77dcd66faaff3c9901ecf60b92e83232f21d869761fd28dace3c SHA512 5cbb46a0fa94341782e5f2adca26de076db4d1ccb557671ef4b4111abfbba56ee630361e0c82e100db7e42e3507c7657709799dc76b5039a49ab0c296c4247b4 WHIRLPOOL f3b4ab2cb4c98211ca00b0598404a8866e77f775d4d05fe19244a8f73b9e5638cc584d675672d89d3345b3a70d18a861f4b61e27ca8a368a8d25966e77a77f44
+MISC ChangeLog 2684 SHA256 e2d6bae0680ae98a389670845fc5942307caebdaa9f3439e5c96a80eb77d39cf SHA512 519e5e9e0b16cfb8893f570292b855fea6012ec50b935c59802359d7f09b959615f692aa50ac496a5d1fd83349bbc7e98be377eeb0c32b7865daaa373cd05dfc WHIRLPOOL a9e6fb970a314cbd63883ced2af539322164e8cb857d9060a90c5b9cbbc3f8c9c4a19e550058167c70707076df65c0166045a0812d5a469cfd53fc28dc337bf1
 MISC metadata.xml 238 SHA256 c82e7b300e53440b3083f208b7c5266d4dfb30d5e844bf5f3cc3537a76891d14 SHA512 203eb4c8b137828f1e896021e9dbd86285d24f58d9101cb298ef396fdc2e00ed2be424dd051a105fe27f88142444129af5c2ccc7e1fd36ddae1886d9fc1cbd8e WHIRLPOOL fdf11d1f196cc11f04e537ea1e4a61335f6e3c0daa02cd5e006f4a567f9643d2ff28f9111c3a70d35e392e522aa45a9af1961b388abb6ec5718bc88443e02ada
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.1
+Version: GnuPG v2
 
-iQJ8BAEBCgBmBQJVLnnpXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirW/IP/0KfrFwhhHu+y9rEZ88gJ3AZ
-pYPNAR7zUCRhbbRc5qImK1F7VVGbaECvgRuQ117WOORzxULxE4VR5G83vbyPp1vP
-GmxCjmlJ91WUncdwKuI4Z3xV3ORtRTtvXTfgV8kn6RGM29w0H6OJHpeIxNOylxnq
-OL6To+Y9/7nMxnuLfAzk2nl91WTOKPaNVo6XVSfu8GIH4ITeUqSDlm1YbEQVMJPo
-Fl16umR8v4FIR0bnu3Pn7DvrpjL38u3fQiGQ3h79D01XY81KmdRW8AOiiJtK3iPJ
-H3LQfizHpORGiQP16nScOElyS1apwZtAQSzJ/EIhVJjqhJDNH0tGpYSqK+6K/mOh
-VYdiZzKaNF4wLCI7Q5fYhpG66PsbLZmp5V+Kveo+lyEILYVUOaTkk9czE4Rkez3K
-kqob6gTxRD0iv7QN7dwTeBtuETw+gw3XFpVvCL5BS/he5ozPwuo2pm5i7aZ+EzpE
-tlMb9EGjtx35eu8e9rav0sRHHn8S7VyWgpvjebbAa+GMoLMvJMEguxNyFvqSKjS7
-TL28tX93hXxSQaTSqnLeWsv7eJObNqPS4/jLSDmTN0WZxrdPBSuHRr55HZL3NCYE
-XSAEiSJoYVslUU+wkuzkCsxn2hLFp4Xj3NQWZ/Tqm53AetGNYs7/zUBOT9X9wu/z
-KF6HnwBUmitv56TP/MxP
-=8cjm
+iQEcBAEBCAAGBQJVRZNQAAoJEEqz6FtPBkyjx1UIAJW9660QrqAeTZp5+yg6MJRk
+dSkarvHM43AaQuhsQgaHk40aSoOUcnjK7y+m2Diq+921YukFvCNvEWBAVEddjl2S
+MHMicT57eIS60H34s1+v18F6Voy38Xz5+wXhYbcAT8o08ToNnOE06u/9KWRy832U
+Qcng8sIuFK0v9lvD1ij+MjxTUU1IakbWkPq1Ze817cXiOfRi/H8g66S1Z0zXwHgC
+ITg7HdUajg2/6tzmXXJ9UhZnAYTZY0Tme2wny1QgYt3afFdansBYTbfc6aKbgzsM
+zBPMqOOpaDDiQv6lrhstwTLX1/KwA32NnIYHt1fUwOXCAH8cQkq96nXKmu6JRuY=
+=XJMv
 -----END PGP SIGNATURE-----
