@@ -1,12 +1,11 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-proxy/sshuttle/sshuttle-0.61-r2.ebuild,v 1.1 2015/04/15 14:47:04 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-proxy/sshuttle/sshuttle-0.61-r3.ebuild,v 1.2 2015/05/03 03:17:38 radhermit Exp $
 
 EAPI=5
-
 PYTHON_COMPAT=( python2_7 )
 
-inherit linux-info python-single-r1
+inherit eutils linux-info python-single-r1
 
 DESCRIPTION="Transparent proxy server that works as a poor man's VPN using ssh"
 HOMEPAGE="https://github.com/apenwarr/sshuttle/"
@@ -34,7 +33,7 @@ src_install() {
 	python_domodule *.py compat
 	python_optimize
 
-	make_wrapper ${PN} "${EPYTHON} $(python_get_sitedir)/${PN}/main.py"
+	make_wrapper ${PN} "${EPYTHON} $(python_get_sitedir)/${PN}/main.py ${EPYTHON}"
 
 	dodoc README.md
 	doman Documentation/${PN}.8
