@@ -1,6 +1,15 @@
 # ChangeLog for net-proxy/sshuttle
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-proxy/sshuttle/ChangeLog,v 1.19 2015/04/15 14:47:04 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-proxy/sshuttle/ChangeLog,v 1.21 2015/05/03 03:17:38 radhermit Exp $
+
+  03 May 2015; Tim Harder <radhermit@gentoo.org> sshuttle-0.61-r3.ebuild:
+  Inherit eutils for make_wrapper.
+
+*sshuttle-0.61-r3 (03 May 2015)
+
+  03 May 2015; Tim Harder <radhermit@gentoo.org> -sshuttle-0.61-r2.ebuild,
+  +sshuttle-0.61-r3.ebuild:
+  Fix wrapper script.
 
 *sshuttle-0.61-r2 (15 Apr 2015)
 
